turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: value lenght is not a member of Array[Char]
  for (i <- 0 to rule.lenght-1){
                      ^LangtonsAnt:8: error: type mismatch;
 found   : Char
 required: String
      dir = rule(i)
                ^