turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var cou=Color.white
 	var dir = ""
  cou = getCouleurSol()
  for (i <- 0 to rule.lenght-1){
    if (cou==colors(i)){
      dir = rule(i)
    }
  }
  if (dir=='L'){
    gauche()
    avance()
  }
  else {
    droite()
    avance()
  }
}